examples/c/error-codes/violates-constraint/fatal/CV-TSE3-bad-static.output
CV-TSE3-bad-static.c:7:9: error: Non-constant static initializer.

    Constraint violation (CV-TSE3):
        see C11 section 6.7.9:4 http://rvdoc.org/C11/6.7.9
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
